--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "proxy": "https://money-manager-backend-nu.vercel.app/api/v1",
   "name": "money-manager-frontend",
   "version": "0.1.0",
   "private": true,
